fix spacings

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -271,6 +271,9 @@ $-vmax-width: 450px;
   min-width: 20em;
   padding-block-end: 16px;
 
+  > p:first-of-type {
+    margin-block-start: unset;
+  }
   .interact-section {
     display: flex;
     justify-content: flex-end;
